# SIAPE

./: .gitignore  README.md  pyproject.toml
siape_tool/: __main__.py  cli.py  scraper.py
siape_tool/utils/: api_calls_dicts.py  constants.py
test/: test_cli.py  test_cli_mock.py
