[tool.poetry]
name = "siape_cli"
version = "0.1.0"
description = "CLI tool to download aggregated data from SIAPE website."
authors = ["Nauel Serraino"]
readme = "README.md"
keywords = ["siape", "scraper", "energy", "epc", "italy"]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.7.0"
pandas = "^2.2.3"
numpy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
