[tool.poetry]
name = "siape_tool"
version = "0.1.0"
description = "CLI tool to download aggregated data from SIAPE website."
authors = ["Nauel Serraino"]
readme = "README.md"
keywords = ["siape", "scraper", "energy", "epc", "italy"]

[tool.poetry.scripts]
siape-cli = "siape_tool.__main__:main" 

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.7.0"
pandas = "^2.2.3"
numpy = "^2.2.0"
argparse = "^1.4.0"
tenacity = "^9.0.0"
requests = "^2.32.3"
tqdm = "^4.67.1"
unittest = "^0.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
